# JustInterp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/JustInterp/: BilinearInterpolator.hpp  JustInterp.hpp  LinearInterpolator.hpp  TableInterpolator.hpp  Utils.hpp
include_single/JustInterp/: JustInterp.hpp
scripts/: build_tests  generate_single_header
scripts/amalgamate/: config.json
src/: CMakeLists.txt
src/JustInterp/: CMakeLists.txt
src/JustInterp/include/: BilinearInterpolator.hpp  LinearInterpolator.hpp  Utils.hpp
test/: CMakeLists.txt  CMakeLists.txt.in
test/src/: BilinearInterpolatorTest.cpp  LinearInterpolatorTest.cpp  TableInterpolatorTest.cpp
